# server

./: .gitignore  Cargo.toml  README.md
frontend/: index.html
secrets/: README.md
src/: core.rs  main.rs
src/config/: dynamic.rs  mod.rs  persistent.rs
src/config/persistent/: storage.rs
src/database/: calls.rs  mod.rs
src/database/surql/: build.surql  file_create.surql  mod.rs  system_create.surql  system_get_by_name.surql  update.surql
src/database/types/: file_state.rs  id.rs  mod.rs  tables.rs
src/error/: conversions.rs  http.rs  mod.rs  rollback.rs
src/handler/: api.rs  mod.rs  resources.rs  ws.rs
src/handler/api/: file.rs  health.rs  version.rs
src/handler/api/core/: body.rs  headers.rs  mod.rs  responses.rs
src/handler/ws/: stream.rs
src/tls/: cloudflare.rs
src/utils/: as_res.rs  consts.rs  logs.rs  mod.rs  time.rs
src/utils/access_code/: mod.rs  operation.rs  payload.rs
src/utils/console/: cmd_system.rs  mod.rs
