[package]
name = "xlix-server"
version = "0.1.0"
edition = "2021"

[features]
# --- Main features
default = []
cloudflare = ["tls"]
# --- Dependencies
tls = [
    "tokio-rustls",
    "rustls",
    "rustls-pemfile",
]

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
surrealdb = { version = "=1.4.2", features = ["kv-rocksdb", "kv-mem"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
paste = "1.0"
tokio-rustls = { version = "0.26", optional = true }
rustls = { version = "0.23", optional = true }
rustls-pemfile = { version = "2.0.0", optional = true }
lazy_static = "1.4.0"
command-engine = { version = "1.0.0", default-features = false, features = ["async"] }
sessionless = "0.1.1"
tokio-tungstenite = "0.21.0"
log = "0.4.21"
futures = "0.3.30"
simple-base64 = "0.23"
chrono = "0.4"

[target.'cfg(windows)'.dependencies]
ansi_term = "0.12.1"
